added changes on 06-06-2025